Build Structure And Prepare Database

--- a/RecruitmentModule/appsettings.json
+++ b/RecruitmentModule/appsettings.json
@@ -1,9 +1,21 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=DESKTOP-8LRQCLO\\MSSQLSERVER01;Initial Catalog=RecruitmentModuleDb;Integrated Security=True"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "JWT": {
+    "Key": "5JytOcUxv2IA+LMakvbfd10SOmufhp3diOVII7n0f6k=", // Key To Encode Toaken
+    "Issuer": "SecureApi",
+    "Audience": "SecureApiUser", // Redirect Toaken Status
+    "DurationInDays": 30
+  },
+  "PATHS": {
+    "PathImage": "E:\\Websites\\riskegypt.com\\system.riskegypt.com\\assets\\images\\MainDirectory\\"
+  }
 }
