--- a/RM.BusinessLayer/RM.BusinessLayer.csproj
+++ b/RM.BusinessLayer/RM.BusinessLayer.csproj
@@ -7,7 +7,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="12.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.2.2" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.2.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\RM.DataAccessLayer\RM.DataAccessLayer.csproj" />
   </ItemGroup>
 
 </Project>
